[package]
name = "vm-rust"
version = "0.1.0"
authors = ["Igor Lira <lira@hey.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-bindgen-futures = "0.4.37"
js-sys = "0.3.81"
binary-reader = "0.4.5"
num = "0.4.1"
num-derive = "0.4.0"
num-traits = "0.2.16"
itertools = "0.11.0"
url = "2.4.1"
manual_future = "0.1.1"
futures = "0.3.30"
pest = "2.7.8"
pest_derive = "2.7.8"
chrono = "0.4.35"
nohash-hasher = "0.2.0"
rgb565 = "0.1.3"
bitvec = "1.0.1"
fxhash = "0.2.1"
async-recursion = "1.1.1"
console_log = "1.0.0"
log = "0.4.22"
percent-encoding = "2"
xml = "1.0"
image = "0.25.8"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[dependencies.async-std]
version = "1.12.0"
features = ["unstable"]

[dependencies.web-sys]
version = "0.3.69"
features = [
  'ImageData',
  'ImageBitmap',
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlElement',
  'MouseEvent',
  'Node',
  'Window',
  'console',
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'console',
  'CssStyleDeclaration',
  'BinaryType',
  'Blob',
  'ErrorEvent',
  'FileReader',
  'MessageEvent',
  'ProgressEvent',
  'WebSocket',
  'CustomEvent',
  'CustomEventInit',
  'Event',
  'AudioContext',
  'AudioBuffer',
  'AudioBufferSourceNode',
  'GainNode',
  'StereoPannerNode',
  'AudioParam',
  'AudioNode',
  'AudioDestinationNode',
  'Blob',
  'BlobPropertyBag',
  'Url',
  'HtmlAudioElement',
  'OfflineAudioContext',
  'AudioContextState',
]

[dependencies.flate2]
version = "1.0.27"
features = ["rust_backend"]
default-features = false

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[package.metadata.wasm-pack.profile.release]
# default is ["-O"]; -g means to preserve debug symbols.
wasm-opt = ["-O", "-g"]
